--- a/01/Makefile
+++ b/01/Makefile
@@ -1,8 +1,9 @@
 obj-m += mymodule.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+#	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C /home/kshitiz/rpi-kernel/linux M=$(PWD) modules
 
 clean:
 
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	make -C /home/kshitiz/rpi-kernel/linux M=$(PWD) clean
