Altered makefiles to use environment variables instead of hardcoded path

--- a/01/Makefile
+++ b/01/Makefile
@@ -2,8 +2,8 @@ obj-m += mymodule.o
 
 all:
 #	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
-	make -C /home/kshitiz/rpi-kernel/linux M=$(PWD) modules
+	make -C ${RPI_KERNEL_SOURCE} M=$(PWD) modules
 
 clean:
-
-	make -C /home/kshitiz/rpi-kernel/linux M=$(PWD) clean
+	make -C ${RPI_KERNEL_SOURCE} M=$(PWD) clean
+#	make -C /home/kshitiz/rpi-kernel/linux M=$(PWD) clean
