--- a/02/Makefile
+++ b/02/Makefile
@@ -1,8 +1,9 @@
-obj-m += dev_nr.o
+obj-m += mymodule.o
 
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+#	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+	make -C ${RPI_KERNEL_SOURCE} M=$(PWD) modules
 
 clean:
-
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	make -C ${RPI_KERNEL_SOURCE} M=$(PWD) clean
+#	make -C /home/kshitiz/rpi-kernel/linux M=$(PWD) clean
